--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.0.0-rc.8",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "echarts": "^5.1.1",
+    "vue": "^2.6.11",
+    "vue-echarts": "^6.0.0-rc.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
